[fix] increase text font on small devices

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ img {
 /*-------- Navbar --------*/
 
 .navbar .nav-link {
-    font-size: 100%;
+    font-size: 120%;
     background-color: #04021c;
     padding-left: 1rem !important;
     padding-right: 1rem !important;
@@ -54,8 +54,16 @@ img {
 
 /*-------- Home --------*/
 
+.intro {
+    font-size: 160%;
+}
+
+.motto {
+    font-size: 120%;
+}
+
 .link span {
-    font-size: 90%;
+    font-size: 120%;
     display: block;
 }
 
@@ -333,6 +341,19 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 
     /*-------- Home --------*/
 
+    .intro {
+        font-size: 140%;
+    }
+
+    .motto {
+        font-size: 100%;
+    }
+
+    .link span {
+        font-size: 90%;
+        display: block;
+    }
+
     #phd .adv {
         width: 100%;
     }
@@ -389,7 +410,7 @@ No media query since this is the default in Bootstrap because it is "mobile firs
  
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
- 
+
 }
  
 /* Extra large devices (large desktops, 1200px and up) */
